data/derived/comb/progs/unify/prog5685.ml.out
Characters 61-63:
  | h::t -> xs + sumList n;;
            ^^
Error: This expression has type 'a list
       but an expression was expected of type int
